--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
             <div class="product-gallery">
                 <div class="main-image mb-4">
-                    <img id="main-product-image" src="https://i.imgur.com/uPrs1EW.png" alt="Main headphone view" class="w-full rounded-lg">
+                    <img id="main-product-image" src="images/headphone-main.jpg" alt="Main headphone view" class="w-full rounded-lg">
                 </div>
                 <div class="thumbnails flex space-x-2">
-                    <img src="https://i.imgur.com/uPrs1EW.png" alt="Thumbnail 1" class="thumbnail w-1/4 cursor-pointer border-2 border-blue-500 rounded-md" data-full="https://i.imgur.com/uPrs1EW.png">
-                    <img src="https://i.imgur.com/dJb2z1q.png" alt="Thumbnail 2" class="thumbnail w-1/4 cursor-pointer border-2 border-transparent rounded-md" data-full="https://i.imgur.com/dJb2z1q.png">
-                    <img src="https://i.imgur.com/eOsj91V.png" alt="Thumbnail 3" class="thumbnail w-1/4 cursor-pointer border-2 border-transparent rounded-md" data-full="https://i.imgur.com/eOsj91V.png">
+                    <img src="images/thumbnail-1.jpg" alt="Thumbnail 1" class="thumbnail w-1/4 cursor-pointer border-2 border-blue-500 rounded-md" data-full="images/thumbnail-1.jpg">
+                    <img src="images/thumbnail-2.jpg" alt="Thumbnail 2" class="thumbnail w-1/4 cursor-pointer border-2 border-transparent rounded-md" data-full="images/thumbnail-2.jpg">
+                    <img src="images/thumbnail-3.jpg alt="Thumbnail 3" class="thumbnail w-1/4 cursor-pointer border-2 border-transparent rounded-md" data-full="images/thumbnail-3.jpg">
                 </div>
             </div>
 
