--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="thumbnails flex space-x-2">
                     <img src="images/thumbnail-1.jpg" alt="Thumbnail 1" class="thumbnail w-1/4 cursor-pointer border-2 border-blue-500 rounded-md" data-full="images/thumbnail-1.jpg">
                     <img src="images/thumbnail-2.jpg" alt="Thumbnail 2" class="thumbnail w-1/4 cursor-pointer border-2 border-transparent rounded-md" data-full="images/thumbnail-2.jpg">
-                    <img src="images/thumbnail-3.jpg alt="Thumbnail 3" class="thumbnail w-1/4 cursor-pointer border-2 border-transparent rounded-md" data-full="images/thumbnail-3.jpg">
+                    <img src="images/thumbnail-3.jpg" alt="Thumbnail 3" class="thumbnail w-1/4 cursor-pointer border-2 border-transparent rounded-md" data-full="images/thumbnail-3.jpg">
                 </div>
             </div>
 
