--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechWave Gadgets - Aura Headphones</title>
+    <title>TechWave Gadgets - Dynamic Showcase</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
@@ -14,17 +14,17 @@
 
             <div class="product-gallery">
                 <div class="main-image mb-4">
-                    <img id="main-product-image" src="images/headphone-main.jpg" alt="Main headphone view" class="w-full rounded-lg">
+                    <img id="main-product-image" src="" alt="Main product view" class="w-full rounded-lg">
                 </div>
                 <div class="thumbnails flex space-x-2">
-                    <img src="images/thumbnail-1.jpg" alt="Thumbnail 1" class="thumbnail w-1/4 cursor-pointer border-2 border-blue-500 rounded-md" data-full="images/thumbnail-1.jpg">
+                    <img src="images/thumbnail-1.jpg" alt="Thumbnail 1" class="thumbnail w-1/4 cursor-pointer border-2 border-transparent rounded-md" data-full="images/thumbnail-1.jpg">
                     <img src="images/thumbnail-2.jpg" alt="Thumbnail 2" class="thumbnail w-1/4 cursor-pointer border-2 border-transparent rounded-md" data-full="images/thumbnail-2.jpg">
                     <img src="images/thumbnail-3.jpg" alt="Thumbnail 3" class="thumbnail w-1/4 cursor-pointer border-2 border-transparent rounded-md" data-full="images/thumbnail-3.jpg">
                 </div>
             </div>
 
             <div class="product-details">
-                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-2">Aura Wireless Headphones</h1>
+                <h1 id="product-title" class="text-3xl md:text-4xl font-bold text-gray-800 mb-2">Loading Product...</h1>
                 <div class="flex items-center mb-4">
                     <div class="text-yellow-400">
                         <i class="fas fa-star"></i>
@@ -33,12 +33,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
                     </div>
-                    <span class="text-gray-500 ml-2">(125 reviews)</span>
+                    <span class="text-gray-500 ml-2">(Fetching reviews...)</span>
                 </div>
-                <p class="text-gray-600 mb-6">
-                    Experience immersive sound with the Aura Wireless Headphones. Featuring noise-cancellation, a 30-hour battery life, and crystal-clear audio.
+                <p id="product-description" class="text-gray-600 mb-6">
+                    Please wait while we fetch the latest product details.
                 </p>
-                <p class="text-4xl font-bold text-gray-900 mb-6">$199.99</p>
+                <p id="product-price" class="text-4xl font-bold text-gray-900 mb-6"></p>
 
                 <div class="mb-6">
                     <h3 class="text-lg font-semibold text-gray-700 mb-2">Color</h3>
