--- a/product.html
+++ b/product.html
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-   <script src="main.js"></script>
+   <script src="product.js"></script>
 
     <div id="cart-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
         <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-lg">
