--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechWave Gadgets - Dynamic Showcase</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body class="bg-gray-100 font-sans">
@@ -87,6 +88,12 @@
             <div class="mt-6 text-right">
                 <p class="text-xl font-bold">Total: <span id="cart-total">$0.00</span></p>
             </div>
+<div class="mt-6 text-right">
+    <p class="text-xl font-bold">Total: <span id="cart-total">$0.00</span></p>
+    <button id="checkout-btn" class="mt-4 w-full bg-green-500 text-white font-semibold py-2 px-4 rounded-lg hover:bg-green-600 transition-colors">
+        Proceed to Checkout
+    </button>
+    </div>
         </div>
     </div>
     </body>
