--- a/product.html
+++ b/product.html
@@ -37,7 +37,9 @@
                         <span id="quantity-display" class="px-4 py-2">1</span>
                         <button id="btn-plus" class="px-4 py-2 text-lg font-bold">+</button>
                     </div>
-                    <button id="add-to-cart-btn" class="flex-1 bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-blue-700">Add to Cart</button>
+                    <button id="add-to-cart-btn" class="flex-1 bg-gray-400 text-white font-semibold py-3 px-6 rounded-lg transition-colors" disabled>
+                        Loading...
+                    </button>
                 </div>
             </div>
         </div>
