--- a/checkout.html
+++ b/checkout.html
@@ -10,21 +10,44 @@
     <div class="container mx-auto mt-10 p-4">
         <div class="bg-white p-8 rounded-lg shadow-lg max-w-lg mx-auto">
             <h1 class="text-2xl font-bold mb-6">Checkout</h1>
-            
+
+            <div class="mb-6">
+                <h2 class="text-lg font-semibold text-gray-700 mb-2">Payment Method</h2>
+                <div class="flex space-x-4">
+                    <div>
+                        <input type="radio" id="payment-method-card" name="payment-method" value="card" class="mr-2" checked>
+                        <label for="payment-method-card">Credit Card</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="payment-method-paypal" name="payment-method" value="paypal" class="mr-2">
+                        <label for="payment-method-paypal">PayPal</label>
+                    </div>
+                </div>
+            </div>
+
             <form id="payment-form">
-                <div class="mb-4">
-                    <label for="email" class="block text-gray-700 mb-2">Email Address</label>
-                    <input type="email" id="email" class="w-full p-2 border rounded" value="customer@example.com" required>
+                <div id="card-details-form">
+                    <div class="mb-4">
+                        <label for="email-card" class="block text-gray-700 mb-2">Email Address</label>
+                        <input type="email" id="email-card" class="w-full p-2 border rounded" value="customer@example.com" required>
+                    </div>
+                    <div class="mb-4">
+                        <label for="card-number" class="block text-gray-700 mb-2">Card Information</label>
+                        <input type="text" id="card-number" class="w-full p-2 border rounded" value="4242 4242 4242 4242" required>
+                    </div>
                 </div>
-                <div class="mb-4">
-                    <label for="card-number" class="block text-gray-700 mb-2">Card Information</label>
-                    <input type="text" id="card-number" class="w-full p-2 border rounded" value="4242 4242 4242 4242" required>
+
+                <div id="paypal-form" class="hidden">
+                     <div class="mb-4">
+                        <label for="email-paypal" class="block text-gray-700 mb-2">PayPal Email</label>
+                        <input type="email" id="email-paypal" class="w-full p-2 border rounded" value="customer@paypal.com" required>
+                    </div>
                 </div>
-                <button type="submit" id="pay-btn" class="w-full bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">
+
+                <button type="submit" id="pay-btn" class="w-full mt-4 bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">
                     Pay Now
                 </button>
             </form>
-
         </div>
     </div>
     <script src="checkout.js"></script>
