--- a/checkout.html
+++ b/checkout.html
@@ -26,14 +26,28 @@
             </div>
 
             <form id="payment-form">
-                <div id="card-details-form">
-                    <div class="mb-4">
-                        <label for="email-card" class="block text-gray-700 mb-2">Email Address</label>
+                <div id="card-details-form" class="space-y-4">
+                    <div>
+                        <label for="email-card" class="block text-gray-700 mb-1">Email Address</label>
                         <input type="email" id="email-card" class="w-full p-2 border rounded" value="customer@example.com" required>
                     </div>
-                    <div class="mb-4">
-                        <label for="card-number" class="block text-gray-700 mb-2">Card Information</label>
-                        <input type="text" id="card-number" class="w-full p-2 border rounded" value="4242 4242 4242 4242" required>
+                    <div>
+                        <label for="card-number" class="block text-gray-700 mb-1">Card Number</label>
+                        <input type="text" id="card-number" class="w-full p-2 border rounded" placeholder="4242 4242 4242 4242" required>
+                    </div>
+                    <div class="flex space-x-4">
+                        <div class="w-1/2">
+                            <label for="exp-date" class="block text-gray-700 mb-1">Expiry Date</label>
+                            <input type="text" id="exp-date" class="w-full p-2 border rounded" placeholder="MM / YY" required>
+                        </div>
+                        <div class="w-1/2">
+                            <label for="cvv" class="block text-gray-700 mb-1">CVV</label>
+                            <input type="text" id="cvv" class="w-full p-2 border rounded" placeholder="123" required>
+                        </div>
+                    </div>
+                     <div>
+                        <label for="address" class="block text-gray-700 mb-1">Billing Address</label>
+                        <input type="text" id="address" class="w-full p-2 border rounded" placeholder="123 Main St, Anytown" required>
                     </div>
                 </div>
 
@@ -44,7 +58,7 @@
                     </div>
                 </div>
 
-                <button type="submit" id="pay-btn" class="w-full mt-4 bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">
+                <button type="submit" id="pay-btn" class="w-full mt-6 bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">
                     Pay Now
                 </button>
             </form>
